@@ -751,10 +751,10 @@ public class SearchBuilderQueueManager implements IndexUpdateTransactionListener
 	{
 		sbi.setName(rst.getString(1));
 		sbi.setContext(rst.getString(2));
-		sbi.setSearchaction(new Integer(rst.getInt(3)));
-		sbi.setSearchstate(new Integer(rst.getInt(4)));
+		sbi.setSearchaction(Integer.valueOf(rst.getInt(3)));
+		sbi.setSearchstate(Integer.valueOf(rst.getInt(4)));
 		sbi.setVersion(rst.getDate(5));
-		sbi.setItemscope(new Integer(rst.getInt(6)));
+		sbi.setItemscope(Integer.valueOf(rst.getInt(6)));
 		sbi.setId(rst.getString(7));
 	}
 
@@ -1083,7 +1083,7 @@ public class SearchBuilderQueueManager implements IndexUpdateTransactionListener
 	 */
 	public void setAutoDdl(String value)
 	{
-		autoDdl = new Boolean(value).booleanValue();
+		autoDdl = Boolean.valueOf(value).booleanValue();
 	}
 	/**
 	 */
